[package]
name = "aes_rust"
version = "0.1.0"
authors = ["maxworsley@outlook.com"]
description = "AES encryption in Rust"
readme = "README.md"
repository = "https://github.com/maxrworsley/aes-rust"
license-file = "LICENSE"
publish = false


[dependencies]

[profile.release]
lto = true
panic = "abort"
